--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="reset.css">
+  <title>CodeJam pallete</title>
+  <link rel="stylesheet" href="palette/style.css">
+  <link rel="stylesheet" href="palette/reset.css">
   <link href="node_modules/css/all.css" rel="stylesheet">
   <!-- <script src="https://use.fontawesome.com/5f808ff765.js"></script> -->
   <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
@@ -23,23 +23,33 @@
   </div>
   <div class="wrapper">
 
+
     <div class="panel">
 
       <div class="pallete">
         <ul>
-          <li> <i class="fas fa-fill-drip"></i>Paint buket</li>
-          <li> <i class="fas fa-eye-dropper"></i>Choose color</li>
-          <li> <i class="fas fa-expand-arrows-alt"></i>Move</li>
-          <li> <i class="fas fa-exchange-alt"></i>Transform</li>
+          <li id="paintBucket"> <i class="fas fa-fill-drip"></i>Paint buket</li>
+          <li id="chooseColor"> <i class="fas fa-eye-dropper"></i>Choose color</li>
+          <li id="move"> <i class="fas fa-expand-arrows-alt"></i>Move</li>
+          <li id="transform"> <i class="fas fa-exchange-alt"></i>Transform</li>
         </ul>
       </div>
 
       <div class="colors">
         <ul>
-          <li> <i class="far fa-circle"></i> Current color</li>
-          <li> <i class="far fa-circle"></i> Prev color</li>
-          <li> <i class="far fa-circle"></i> red</li>
-          <li> <i class="far fa-circle"></i> blue</li>
+          <input id="color" type="color" value="#ff0000">
+          <li id="curr-color">
+            <div class="circle curr-color"> </div>Current color
+          </li>
+          <li id="prev-color">
+            <div class="circle prev-color"> </div>Prev color
+          </li>
+          <li id="red-color">
+            <div class="circle red-color"> </div></i>red
+          </li>
+          <li id="blue-color">
+            <div class="circle blue-color"> </div>blue
+          </li>
         </ul>
       </div>
 
@@ -60,6 +70,6 @@
   </div>
 
 </body>
-
+<script src="palette/animation.js"></script>
 
 </html>
