--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="pallete">
         <ul>
           <li id="paintBucket"> <i class="fas fa-fill-drip"></i>Paint buket</li>
-          <li id="chooseColor"> <i class="fas fa-eye-dropper"></i>Choose color</li>
+          <li id="colorPicker"> <i class="fas fa-eye-dropper"></i>Choose color</li>
           <li id="move"> <i class="fas fa-expand-arrows-alt"></i>Move</li>
           <li id="transform"> <i class="fas fa-exchange-alt"></i>Transform</li>
         </ul>
