--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="palette/style.css">
   <link rel="stylesheet" href="palette/reset.css">
   <link href="node_modules/css/all.css" rel="stylesheet">
+  <link rel="shortcut icon" href="asserts/images/app-icons-300x172.png" type="image/x-icon">
   <!-- <script src="https://use.fontawesome.com/5f808ff765.js"></script> -->
   <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
@@ -23,7 +24,6 @@
   </div>
   <div class="wrapper">
 
-
     <div class="panel">
 
       <div class="pallete">
@@ -37,7 +37,6 @@
 
       <div class="colors">
         <ul>
-          <input id="color" type="color" value="#ff0000">
           <li id="curr-color">
             <div class="circle curr-color"> </div>Current color
           </li>
@@ -45,10 +44,13 @@
             <div class="circle prev-color"> </div>Prev color
           </li>
           <li id="red-color">
-            <div class="circle red-color"> </div></i>red
+            <div class="circle red-color"> </div></i>Red
           </li>
           <li id="blue-color">
-            <div class="circle blue-color"> </div>blue
+            <div class="circle blue-color"> </div>Blue
+          </li>
+          <li>
+            <input id="color" type="color" value="#ff0000">
           </li>
         </ul>
       </div>
@@ -56,20 +58,21 @@
     </div>
 
     <div class="canvas">
-      <div class="block block1"></div>
-      <div class="block block2"></div>
-      <div class="block block3"></div>
-      <div class="block block4"></div>
-      <div class="block block5"></div>
-      <div class="block block6"></div>
-      <div class="block block7"></div>
-      <div class="block block8"></div>
-      <div class="block block9"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
     </div>
 
   </div>
 
 </body>
+
 <script src="palette/animation.js"></script>
 
 </html>
