fix: move action

--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
   <title>CodeJam pallete</title>
   <link rel="stylesheet" href="palette/style.css">
   <link rel="stylesheet" href="palette/reset.css">
-  <link href="node_modules/css/all.css" rel="stylesheet">
   <link rel="shortcut icon" href="asserts/images/app-icons-300x172.png" type="image/x-icon">
-  <!-- <script src="https://use.fontawesome.com/5f808ff765.js"></script> -->
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
   <div class="menu">
 
     <h1>
-      <i class="fas fa-bars"></i>
+      <i class="fa fa-bars"></i>
       CodeJam pallete
     </h1>
   </div>
@@ -28,10 +25,18 @@
 
       <div class="pallete">
         <ul>
-          <li id="paintBucket"> <i class="fas fa-fill-drip"></i>Paint buket</li>
-          <li id="colorPicker"> <i class="fas fa-eye-dropper"></i>Choose color</li>
-          <li id="move"> <i class="fas fa-expand-arrows-alt"></i>Move</li>
-          <li id="transform"> <i class="fas fa-exchange-alt"></i>Transform</li>
+          <li id="paintBucket">
+            <div class="icon fill-drip"></div> <span>Paint buket</span>
+          </li>
+          <li id="colorPicker">
+            <div class="icon eye-dropper"></div>Choose color
+          </li>
+          <li id="move">
+            <div class="icon expand-arrows"></div>Move
+          </li>
+          <li id="transform">
+            <div class="icon exchange"></div>Transform
+          </li>
         </ul>
       </div>
 
