feat: realize saving of the state of the colors on the panel

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="pallete">
         <ul>
           <li id="paintBucket">
-            <div class="icon fill-drip"></div> <span>Paint buket</span>
+            <div class="icon fill-drip"></div> Paint buket
           </li>
           <li id="colorPicker">
             <div class="icon eye-dropper"></div>Choose color
@@ -63,15 +63,15 @@
     </div>
 
     <div class="canvas">
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
+      <div class="figure"></div>
     </div>
 
   </div>
