refactor:  js code reorganized

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
   <div class="menu">
-
     <h1>
       <i class="fa fa-bars"></i>
       CodeJam pallete
@@ -22,40 +21,38 @@
   <div class="wrapper">
 
     <div class="panel">
+      <ul class="pallete">
+        <li class="paintBucket">
+          <div class="icon fill-drip"></div> Paint buket
+        </li>
+        <li class="colorPicker">
+          <div class="icon eye-dropper"></div>Choose color
+        </li>
+        <li class="move">
+          <div class="icon expand-arrows"></div>Move
+        </li>
+        <li class="transform">
+          <div class="icon exchange"></div>Transform
+        </li>
+      </ul>
 
-      <div class="pallete">
-        <ul>
-          <li id="paintBucket">
-            <div class="icon fill-drip"></div> Paint buket
-          </li>
-          <li id="colorPicker">
-            <div class="icon eye-dropper"></div>Choose color
-          </li>
-          <li id="move">
-            <div class="icon expand-arrows"></div>Move
-          </li>
-          <li id="transform">
-            <div class="icon exchange"></div>Transform
-          </li>
-        </ul>
-      </div>
 
       <div class="colors">
         <ul>
-          <li id="curr-color">
+          <li class="curr-color__item">
             <div class="circle curr-color"> </div>Current color
           </li>
-          <li id="prev-color">
+          <li class="prev-color__item">
             <div class="circle prev-color"> </div>Prev color
           </li>
-          <li id="red-color">
+          <li class="red-color__item">
             <div class="circle red-color"> </div></i>Red
           </li>
-          <li id="blue-color">
+          <li class="blue-color__item">
             <div class="circle blue-color"> </div>Blue
           </li>
           <li>
-            <input id="color" type="color" value="#ff0000">
+            <input class="color" type="color" value="#ff0000">
           </li>
         </ul>
       </div>
@@ -63,15 +60,15 @@
     </div>
 
     <div class="canvas">
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
-      <div class="figure"></div>
+      <div class="figure block1"></div>
+      <div class="figure block2"></div>
+      <div class="figure block3"></div>
+      <div class="figure block4"></div>
+      <div class="figure block5"></div>
+      <div class="figure block6"></div>
+      <div class="figure block7"></div>
+      <div class="figure block8"></div>
+      <div class="figure block9"></div>
     </div>
 
   </div>
