--- a/index.html
+++ b/index.html
@@ -22,40 +22,40 @@
 
     <div class="panel">
       <ul class="pallete">
-        <li class="paintBucket">
+        <li class="paintBucket" tabindex="1">
           <div class="icon fill-drip"></div> Paint buket
         </li>
-        <li class="colorPicker">
+        <li class="colorPicker" tabindex="2">
           <div class="icon eye-dropper"></div>Choose color
         </li>
-        <li class="move">
+        <li class="move" tabindex="3">
           <div class="icon expand-arrows"></div>Move
         </li>
-        <li class="transform">
+        <li class="transform" tabindex="4">
           <div class="icon exchange"></div>Transform
+        </li>
+        <li>
+          <button class="save-state" tabindex="-1"> Save state</button></p>
         </li>
       </ul>
 
-
-      <div class="colors">
-        <ul>
-          <li class="curr-color__item">
-            <div class="circle curr-color"> </div>Current color
-          </li>
-          <li class="prev-color__item">
-            <div class="circle prev-color"> </div>Prev color
-          </li>
-          <li class="red-color__item">
-            <div class="circle red-color"> </div></i>Red
-          </li>
-          <li class="blue-color__item">
-            <div class="circle blue-color"> </div>Blue
-          </li>
-          <li>
-            <input class="color" type="color" value="#ff0000">
-          </li>
-        </ul>
-      </div>
+      <ul class="colors">
+        <li class="curr-color__item">
+          <div class="circle curr-color"> </div>Current color
+        </li>
+        <li class="prev-color__item">
+          <div class="circle prev-color"> </div>Prev color
+        </li>
+        <li class="red-color__item">
+          <div class="circle red-color"> </div></i>Red
+        </li>
+        <li class="blue-color__item">
+          <div class="circle blue-color"> </div>Blue
+        </li>
+        <li>
+          <input class="color" type="color" value="#ff0000" tabindex="-1">
+        </li>
+      </ul>
 
     </div>
 
@@ -75,6 +75,6 @@
 
 </body>
 
-<script src="palette/animation.js"></script>
+<script src="palette/animation.js" type="module"></script>
 
 </html>
