feat: add hotkeys

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <div class="panel">
       <ul class="pallete">
         <li class="paintBucket" tabindex="1">
-          <div class="icon fill-drip"></div> Paint buket
+          <div class="icon fill-drip"></div> <ins>P</ins>aint buket
         </li>
         <li class="colorPicker" tabindex="2">
-          <div class="icon eye-dropper"></div>Choose color
+          <div class="icon eye-dropper"></div><ins>C</ins>hoose color
         </li>
         <li class="move" tabindex="3">
-          <div class="icon expand-arrows"></div>Move
+          <div class="icon expand-arrows"></div><ins>M</ins>ove
         </li>
         <li class="transform" tabindex="4">
-          <div class="icon exchange"></div>Transform
+          <div class="icon exchange"></div><ins>T</ins>ransform
         </li>
         <li>
-          <button class="save-state" tabindex="-1"> Save state</button></p>
+          <button class="save-state" tabindex="-1"> Save state (Alt+S)</button></p>
         </li>
       </ul>
 
@@ -75,6 +75,6 @@
 
 </body>
 
-<script src="palette/animation.js" type="module"></script>
+<script src="palette/app.js" type="module"></script>
 
 </html>
